Fix jumping modules when using several tabs. Some minor camera fixes.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -66,6 +66,10 @@ body {
   padding-left: 80px;
 }
 
+.section {
+  position: absolute;
+}
+
 .section:after {
 	content: "";
 	display: table;
